--- a/PlakaTanimaSistemi/LicensePlateRecognition/LicensePlateRecognition.csproj
+++ b/PlakaTanimaSistemi/LicensePlateRecognition/LicensePlateRecognition.csproj
@@ -74,11 +74,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtBitmap.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Matrix.cs" />
     <Compile Include="OCR.cs">
@@ -89,8 +89,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OCR.resx">
       <DependentUpon>OCR.cs</DependentUpon>
